Build a Mixed Fraction: Numbers: Made it possible to show mixed numbers for targets
Build a Mixed Fraction: Added more support for mixed numbers
Build a Mixed Fraction: Updated title and internationalized tab name
# 1.00.38 (66957) Aug 14, 2012
Removed unused images
Build a Fraction: Updated i18n
Build a Fraction: Shapes: Fixed: if you push the undo button on more than one shape after it has been collected, new containers will not fly out automatically when you complete a target
Build a Fraction: Numbers: Fixed: Level 6 can create challenges with only a stack of "1" cards
Build a Fraction: Shapes: Fixed: mouse gets away from bars when dragged out
Build a Fraction: Made carousel circles clickable since they look like radio buttons
# 1.00.37 (66926) Aug 14, 2012
Equality Lab: Made right representation pink so it doesn't match any of the left representation colors
# 1.00.36 (66924) Aug 13, 2012
Customized level selection button icons for Fraction Matcher and Build a Fraction
# 1.00.35 (66922) Aug 13, 2012
Added a faint shadow to make "level selection screen" button icons look more like buttons
Build a Fraction: Shapes: Move the "undo" button closer to the circular containers
Build a Fraction: Shapes: For level 8, where fractions > 1 are introduced, only use denominators of 1/2 and 1/4 for the fractions > 1
Fraction Matcher: Moved level selection button to the right, above the refresh button
Build a Fraction: Shapes: When dropping a container in an incorrect collection box, do not move to exactly overlap a container that is already centered in the play area.
Switched to use a "level selection screen" button instead of a back button for build a fraction and fraction matcher.
Build a Fraction: Shapes: Fixed: If the "undo" button is pressed for a "double container" that is in the collection box, and it flies back to the floating panel it does not recollapse to single container.